--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,25 @@
 <resources>
     <string name="app_name">NFC Encrypter</string>
 
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="read_help_title">How to read NFC tag</string>
+    <string name="read_help_desc">To read a tag in this app,
+        encrypted data must have already be written into the tag,
+        an empty tag or a tag with only text records written in it.\n
+        Any other kind of data written on the tag can not be read by this app,
+        as this app is not designed to read all types.\n
+        Make sure to have NFC turned on in the device\'s settings before continuing with the help guide.\n
+        To read the contents of a tag, simply scan the tag by placing it near the device.
+        (for more information on where is the NFC reader on this device, please refer to the device\'s manual or google it).\n
+        A password prompt will come up if encrypted data was written previously into tag otherwise
+        it will simply show the records in the order they we were written into it.
+        </string>
+    <string name="write_help_title">How to write and encrypt data into a tag</string>
+    <string name="write_help_desc">To write and encrypt data into an NFC tag, 2 perquisites are required:\n
+        1: A device that supports NFC tag reading and writing.(This should already be achieved as the app can not be installed otherwise).\n
+        2: An NFC tag that supports NDEF technology(check the seller of the tag for more information).\n\n
+        On the WRITE tab records (texts) can be added and both a password and a confirmation are required to encrypt that data into the tag.\n
+    </string>
+    <string name="copy_help_title">How to copy tags</string>
+    <string name="copy_help_desc">Copying tags </string>
+
 </resources>
